fixing config values

--- a/sql-app/src/main/resources/config.properties
+++ b/sql-app/src/main/resources/config.properties
@@ -1,14 +1,9 @@
-global.region=us-east5
-
+project.id=crashmeyer
+secret.id=db-password
 database.url=jdbc:postgresql://google/%s?cloudSqlInstance=%s&socketFactory=%s
 database.username=postgres
-database.password=Pa55w0rd019283
 database.name=acme
 database.tablename=sales
-database.instanceconnectionname=blog-465608:us-central1:blog
-database.endpoint=34.134.69.20
-database.port=5432
 database.socketfactory=com.google.cloud.sql.postgres.SocketFactory
 database.createtablefile=create_sales_tbl.sql
-database.datafile=/home/stamperj/gcp/blog/datasets/blog_mock_dataset_50cust_1000purch.csv
-kms.keyuri=gcp-kms://projects/blog-465608/locations/global/keyRings/blog/cryptoKeys/data-encrypt-decrypt
+database.datafile=mock_dataset_50cust_1000purch.csv
